fix(docsearch): text overflow

--- a/src/theme/SearchBar/components/History/index.module.scss
+++ b/src/theme/SearchBar/components/History/index.module.scss
@@ -39,3 +39,9 @@
     }
   }
 }
+
+.excerpt {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
